<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
		http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.scijava</groupId>
		<artifactId>pom-scijava</artifactId>
		<version>1.155</version>
		<relativePath />
	</parent>

	<groupId>sc.fiji</groupId>
	<artifactId>pom-fiji</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Aggregator project for the Fiji project</name>
	<description></description>

	<properties>
		<bio-formats.groupId>ome</bio-formats.groupId>
		<bio-formats.version>5.0.0</bio-formats.version>

		<Colocalisation_Analysis.version>2.0.0-SNAPSHOT</Colocalisation_Analysis.version>
		<IJ_Robot.version>1.0.0</IJ_Robot.version>
		<SPIM_Registration.version>2.0.0-SNAPSHOT</SPIM_Registration.version>
		<Sholl_Analysis.version>3.4.1</Sholl_Analysis.version>
		<AnalyzeSkeleton.version>2.0.0-SNAPSHOT</AnalyzeSkeleton.version>
		<Stitching.version>2.0.0-SNAPSHOT</Stitching.version>
		<TrackMate.version>2.2.0</TrackMate.version>
		<Vaa3d_Writer.version>1.0.0</Vaa3d_Writer.version>
		<autocomplete.version>2.0.2</autocomplete.version>
		<batik.version>1.8</batik.version>
		<beanshell.version>2.0b4</beanshell.version>
		<bunwarpj.version>2.6.1-SNAPSHOT</bunwarpj.version>
		<clojure.version>1.3.0</clojure.version>
		<commons-math.version>3.2</commons-math.version>
		<edu.mines.version>20100113</edu.mines.version>
		<fiji.version>2.0.0-SNAPSHOT</fiji.version>
		<image5d.version>1.2.5</image5d.version>
		<imagescience.version>2.4.2-SNAPSHOT</imagescience.version>
		<itextpdf.version>5.1.1</itextpdf.version>
		<jama.version>1.0.2</jama.version>
		<java3d.version>1.5.2</java3d.version>
		<javassist.version>3.16.1-GA</javassist.version>
		<jcommon.version>1.0.17</jcommon.version>
		<jdom.version>2.0.2</jdom.version>
		<jep.version>2.4.1-fiji1-SNAPSHOT</jep.version>
		<jfreechart.version>1.0.14</jfreechart.version>
		<jgrapht.version>0.8.3</jgrapht.version>
		<jgraphx.version>1.10.4.1</jgraphx.version>
		<jna.version>3.2.7</jna.version>
		<jpedal.groupId>org.jpedal</jpedal.groupId>
		<jpedal.version>2.80b11</jpedal.version>
		<jruby.version>1.7.11</jruby.version>
		<js.version>1.7R2</js.version>
		<jsch.version>0.1.49</jsch.version>
		<jython.version>2.5.2</jython.version>
		<jzlib.version>1.0.7</jzlib.version>
		<legacy-imglib1.version>2.0.0-SNAPSHOT</legacy-imglib1.version>
		<level_sets.version>1.0.1-SNAPSHOT</level_sets.version>
		<mpicbg.version>0.6.1</mpicbg.version>
		<rsyntaxtextarea.version>2.0.4.1</rsyntaxtextarea.version>
		<scala.version>2.10.0</scala.version>
		<skeletonize3d.version>1.0.1-SNAPSHOT</skeletonize3d.version>
		<trakem2.version>1.0b-SNAPSHOT</trakem2.version>
		<weka.version>3.7.6</weka.version>
		<javac.version>1.6.0.24-ubuntu-fiji1</javac.version>
		<TopoJ_.version>2.0.0-SNAPSHOT</TopoJ_.version>
		<bUnwarpJ_.version>2.6.1-SNAPSHOT</bUnwarpJ_.version>
		<Trainable_Segmentation.version>2.0.0-SNAPSHOT</Trainable_Segmentation.version>
		<Siox_Segmentation.version>1.0.1-SNAPSHOT</Siox_Segmentation.version>
		<imageware.version>2.0.0-SNAPSHOT</imageware.version>
		<mij.version>1.3.6-fiji2-SNAPSHOT</mij.version>
		<imagescience.version>2.4.2-SNAPSHOT</imagescience.version>
		<level_sets.version>1.0.1-SNAPSHOT</level_sets.version>
		<fake.version>2.0.0-SNAPSHOT</fake.version>
		<pal-optimization.version>2.0.0-SNAPSHOT</pal-optimization.version>
		<wavelets.version>2.0.0-SNAPSHOT</wavelets.version>
		<Arrow_.version>2.0.0-SNAPSHOT</Arrow_.version>
		<Samples_.version>2.0.0-SNAPSHOT</Samples_.version>
		<Analyze_Reader_Writer.version>2.0.0-SNAPSHOT</Analyze_Reader_Writer.version>
		<ImageJ_3D_Viewer.version>2.0.0-SNAPSHOT</ImageJ_3D_Viewer.version>
		<Fiji_3D_Blob_Segmentation.version>2.0.0-SNAPSHOT</Fiji_3D_Blob_Segmentation.version>
		<ImageJ_3D_Objects_Counter.version>2.0.0-SNAPSHOT</ImageJ_3D_Objects_Counter.version>
		<Anisotropic_Diffusion_2D.version>2.0.0-SNAPSHOT</Anisotropic_Diffusion_2D.version>
		<Archipelago_Plugins.version>0.5.0-SNAPSHOT</Archipelago_Plugins.version>
		<Auto_Threshold.version>1.16-SNAPSHOT</Auto_Threshold.version>
		<BalloonSegmentation_.version>2.0.0-SNAPSHOT</BalloonSegmentation_.version>
		<BeanShell_Interpreter.version>2.0.0-SNAPSHOT</BeanShell_Interpreter.version>
		<Bug_Submitter.version>2.0.0-SNAPSHOT</Bug_Submitter.version>
		<CLI_.version>2.0.0-SNAPSHOT</CLI_.version>
		<CPU_Meter.version>2.0.0-SNAPSHOT</CPU_Meter.version>
		<Calculator_Plus.version>2.0.0-SNAPSHOT</Calculator_Plus.version>
		<Clojure_Interpreter.version>2.0.0-SNAPSHOT</Clojure_Interpreter.version>
		<Color_Histogram.version>2.0.6-SNAPSHOT</Color_Histogram.version>
		<Color_Inspector_3D.version>2.3-SNAPSHOT</Color_Inspector_3D.version>
		<Colour_Deconvolution.version>2.0.0-SNAPSHOT</Colour_Deconvolution.version>
		<CorrectBleach_.version>2.0.0-SNAPSHOT</CorrectBleach_.version>
		<Descriptor_based_registration.version>2.0.0-SNAPSHOT</Descriptor_based_registration.version>
		<Dichromacy_.version>2.0.0-SNAPSHOT</Dichromacy_.version>
		<Differentials_.version>2.0.0-SNAPSHOT</Differentials_.version>
		<Directionality_.version>2.0.1-SNAPSHOT</Directionality_.version>
		<Extended_Depth_Field.version>2.0.0-SNAPSHOT</Extended_Depth_Field.version>
		<FS_Align_TrakEM2.version>2.0.0-SNAPSHOT</FS_Align_TrakEM2.version>
		<FeatureJ_.version>1.6.1-SNAPSHOT</FeatureJ_.version>
		<Feature_Detection.version>2.0.0-SNAPSHOT</Feature_Detection.version>
		<Fiji_Archipelago.version>2.0.0-SNAPSHOT</Fiji_Archipelago.version>
		<Fiji_Developer.version>2.0.0-SNAPSHOT</Fiji_Developer.version>
		<Fiji_Package_Maker.version>2.0.0-SNAPSHOT</Fiji_Package_Maker.version>
		<Fiji_Plugins.version>2.0.0-SNAPSHOT</Fiji_Plugins.version>
		<Fiji_Updater.version>2.0.0-SNAPSHOT</Fiji_Updater.version>
		<FlowJ_.version>1.29.1-SNAPSHOT</FlowJ_.version>
		<Graph_Cut.version>0.1.1-SNAPSHOT</Graph_Cut.version>
		<Gray_Morphology.version>2.3.2-SNAPSHOT</Gray_Morphology.version>
		<Helmholtz_Analysis.version>2.0.1-SNAPSHOT</Helmholtz_Analysis.version>
		<IO_.version>2.0.0-SNAPSHOT</IO_.version>
		<Image_Expression_Parser.version>2.0.0-SNAPSHOT</Image_Expression_Parser.version>
		<Interactive_3D_Surface_Plot.version>2.31.1-SNAPSHOT</Interactive_3D_Surface_Plot.version>
		<IsoData_Classifier.version>2.0.0-SNAPSHOT</IsoData_Classifier.version>
		<JRuby_Interpreter.version>2.0.0-SNAPSHOT</JRuby_Interpreter.version>
		<Javascript_.version>2.0.0-SNAPSHOT</Javascript_.version>
		<Jython_Interpreter.version>2.0.0-SNAPSHOT</Jython_Interpreter.version>
		<Kuwahara_Filter.version>2.0.0-SNAPSHOT</Kuwahara_Filter.version>
		<Lasso_and_Blow_Tool.version>2.0.0-SNAPSHOT</Lasso_and_Blow_Tool.version>
		<Linear_Kuwahara.version>2.0.0-SNAPSHOT</Linear_Kuwahara.version>
		<LocalThickness_.version>3.1.1-SNAPSHOT</LocalThickness_.version>
		<MTrack2_.version>2.0.0-SNAPSHOT</MTrack2_.version>
		<MTrackJ_.version>1.5.1-SNAPSHOT</MTrackJ_.version>
		<M_I_P.version>2.0.0-SNAPSHOT</M_I_P.version>
		<Manual_Tracking.version>2.0.0-SNAPSHOT</Manual_Tracking.version>
		<MosaicJ_.version>2.0.0-SNAPSHOT</MosaicJ_.version>
		<Multi_Kymograph.version>2.0.0-SNAPSHOT</Multi_Kymograph.version>
		<PointPicker_.version>2.0.0-SNAPSHOT</PointPicker_.version>
	</properties>

	<modules>
		<module>src-plugins</module>
		<module>external</module>
		<module>modules</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>net.imagej</groupId>
				<artifactId>imagej-maven-plugin</artifactId>
				<configuration>
					<deleteOtherVersions>true</deleteOtherVersions>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<mailingLists>
		<mailingList>
			<name>ImageJ</name>
			<subscribe>http://imagej.net/list.html</subscribe>
			<unsubscribe>http://imagej.net/list.html</unsubscribe>
			<post>imagej@list.nih.gov</post>
			<archive>http://list.nih.gov/archives/imagej.html</archive>
		</mailingList>
		<mailingList>
			<name>Fiji-devel</name>
			<subscribe>http://groups.google.com/group/fiji-devel</subscribe>
			<unsubscribe>http://groups.google.com/group/fiji-devel</unsubscribe>
			<post>fiji@fiji.sc</post>
			<archive>http://groups.google.com/group/fiji-devel</archive>
		</mailingList>
	</mailingLists>

	<scm>
		<connection>scm:git:git://github.com/fiji/fiji</connection>
		<developerConnection>scm:git:git@github.com:fiji/fiji</developerConnection>
		<tag>HEAD</tag>
		<url>https://github.com/fiji/fiji</url>
	</scm>

	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.8.1</version>
				<configuration>
					<links combine.children="append">
						<link>http://jenkins.imagej.net/job/ImageJ-daily/javadoc</link>
						<link>http://jenkins.imagej.net/job/ImgLib-daily/javadoc</link>
						<link>http://jenkins.imagej.net/job/ImageJ1-javadoc/javadoc</link>
						<link>http://weka.sourceforge.net/doc.dev/</link>
					</links>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<repositories>
		<!-- NB: for project parent -->
		<repository>
			<id>imagej.public</id>
			<url>http://maven.imagej.net/content/groups/public</url>
		</repository>
	</repositories>

	<!-- NB: for deploying to maven.imagej.net -->
	<distributionManagement>
		<repository>
			<id>imagej.releases</id>
			<name>ImageJ Releases Repository</name>
			<url>dav:http://maven.imagej.net/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>imagej.snapshots</id>
			<name>ImageJ Snapshots Repository</name>
			<url>dav:http://maven.imagej.net/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<profiles>
		<!-- HACK: Eclipse in JDK 1.5 mode does not like @Override for methods implemention interfaces. -->
		<profile>
			<id>no-eclipse</id>
			<activation>
				<property>
					<name>!m2e.version</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>2.3.2</version>
						<configuration>
							<source>1.5</source>
							<target>1.5</target>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<name>Mac OS X</name>
				</os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<compilerArgument>-Djava.ext.dirs=${rootdir}/java/macosx-java3d/Home/lib/ext</compilerArgument>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
